Add two job build and deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,12 @@ name: Build & Deploy Zola with Docker
 on:
   push:
     branches:
-      - main   # o la rama donde tengas tu código fuente
+      - main  
+permissions:
+  contents: write
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,15 +22,34 @@ jobs:
 
       - name: Extract public folder
         run: |
+          mkdir -p ./public
           container_id=$(docker create zola-site)
           docker cp $container_id:/public ./public
           docker rm $container_id
+        
+      - name: Upload public folder as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: public-folder
+          path: ./public
+        
+  deploy:
+    runs-on: ubuntu-lates
+    needs: build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      - name: Download public folder artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: public-folder
+          path: ./public
+      
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./public/*
           publish_branch: gh-pages
 
-          
