--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           path: ./public
         
   deploy:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Checkout repository
